--- a/data/css/about.less
+++ b/data/css/about.less
@@ -18,6 +18,9 @@ html,body{
       text-align: center;
       font-size: 300%;
     }
+    .icon{
+
+    }
   }
 
 
@@ -32,6 +35,15 @@ html,body{
       min-height:0;
       .content{
         color: #333;
+      }
+
+      #securityDescription{
+        .short{
+
+        }
+        .long{
+          display:none;
+        }
       }
     }
     .white{
