--- a/data/css/colors.less
+++ b/data/css/colors.less
@@ -2,3 +2,18 @@
 @green: #31cc81;
 @purple: #c879f2;
 @red: #f08078;
+
+a{
+  &:link{
+    color:@blue;
+  }
+  &:visited{
+    color:@purple;
+  }
+  &:hover{
+    color:@green;
+  }
+  &:active{
+    color:@red;
+  }
+}
